update image pull secrets

--- a/helm/decisionlens/templates/apigateway.yaml
+++ b/helm/decisionlens/templates/apigateway.yaml
@@ -92,7 +92,7 @@ spec:
       serviceAccountName: apigateway-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
