--- a/helm/decisionlens/templates/auth.yaml
+++ b/helm/decisionlens/templates/auth.yaml
@@ -182,8 +182,8 @@ spec:
       serviceAccountName: auth-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
