--- a/helm/decisionlens/templates/dlc.yaml
+++ b/helm/decisionlens/templates/dlc.yaml
@@ -178,8 +178,8 @@ spec:
       serviceAccountName: dlc-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
