--- a/helm/decisionlens/templates/dlxui.yaml
+++ b/helm/decisionlens/templates/dlxui.yaml
@@ -72,7 +72,7 @@ spec:
       serviceAccountName: dlxui-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
