--- a/helm/decisionlens/templates/integration.yaml
+++ b/helm/decisionlens/templates/integration.yaml
@@ -158,8 +158,8 @@ spec:
       serviceAccountName: integration-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
