--- a/helm/decisionlens/templates/plan.yaml
+++ b/helm/decisionlens/templates/plan.yaml
@@ -170,7 +170,7 @@ spec:
       serviceAccountName: plan-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
