--- a/helm/decisionlens/templates/portfolio.yaml
+++ b/helm/decisionlens/templates/portfolio.yaml
@@ -170,8 +170,8 @@ spec:
       serviceAccountName: portfolio-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
