--- a/helm/decisionlens/templates/rabbitmq.yaml
+++ b/helm/decisionlens/templates/rabbitmq.yaml
@@ -47,8 +47,8 @@ spec:
       serviceAccountName: rabbitmq-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
   
