--- a/helm/decisionlens/values.yaml
+++ b/helm/decisionlens/values.yaml
@@ -57,7 +57,7 @@ service:
   image:
     url: 723504183657.dkr.ecr.us-east-1.amazonaws.com
   integration:
-    tag: decisionlens_downloads:integration-service_4.2.2
+    tag: decisionlens_downloads:integration-service_4.3.3
     port: 9000
     url: http://integration-service:9000
     replicas: 1
@@ -65,7 +65,7 @@ service:
     selectorLabels: {}
     podAnnotations: {}
   portfolio:
-    tag: decisionlens_downloads:portfolio-service_5.8.0
+    tag: decisionlens_downloads:portfolio-service_6.2.1
     port: 9001
     url: http://portfolio-service:9001
     replicas: 1
@@ -73,7 +73,7 @@ service:
     selectorLabels: {}
     podAnnotations: {}
   plan:
-    tag: decisionlens_downloads:plan-service_4.2.5
+    tag: decisionlens_downloads:plan-service_4.4.3
     port: 9003
     url: http://plan-service:9003
     replicas: 1
@@ -81,7 +81,7 @@ service:
     selectorLabels: {}
     podAnnotations: {}
   messaging:
-    tag: decisionlens_downloads:messaging-service_3.7.2
+    tag: decisionlens_downloads:messaging-service_3.9.2
     port: 9004
     url: http://messaging-service:9004
     replicas: 1
@@ -89,7 +89,7 @@ service:
     selectorLabels: {}
     podAnnotations: {}
   apigateway:
-    tag: decisionlens_downloads:apigateway-service_4.7.2
+    tag: decisionlens_downloads:apigateway-service_5.2.1
     version: master
     port: 9005
     url: http://apigateway-service:9005
@@ -98,7 +98,7 @@ service:
     selectorLabels: {}
     podAnnotations: {}
   auth:
-    tag: decisionlens_downloads:auth-service_4.2.0
+    tag: decisionlens_downloads:auth-service_5.1.2
     port: 9006
     url: http://auth-service:9006
     replicas: 1
@@ -107,7 +107,7 @@ service:
     podAnnotations: {}
     extraEnv: []
   dlxui:
-    tag: decisionlens_downloads:dlx-ui_5.8.2
+    tag: decisionlens_downloads:dlx-ui_7.0.3
     port: 8089
     replicas: 1
     labels: {}
@@ -123,12 +123,13 @@ service:
     annotations: {}
     extraEnv: []
   dlcui:
-    tag: decisionlens_downloads:dlc-ui_1.21.49
+    tag: decisionlens_downloads:dlc-ui_1.21.55
     port: 8088
     replicas: 1
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
 
 rabbitmq:
   image: 723504183657.dkr.ecr.us-east-1.amazonaws.com/decisionlens_downloads:rabbitmq_3.11.0
