--- a/helm/decisionlens/templates/integration.yaml
+++ b/helm/decisionlens/templates/integration.yaml
@@ -40,12 +40,15 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
-      {{ if .Values.jwt.publicKey }}
       volumes:
+      {{ if .Values.jwt.publicKey }}
       - name: jwt-keys-volume
         secret:
           secretName: jwt-keys-secret
       {{ end }}
+      {{- if .Values.service.integration.extraVolumes -}}
+      {{ toYaml .Values.service.integration.extraVolumes | nindent 6 }}
+      {{- end }}
       containers:
       - name: integration
         image: {{ .Values.service.image.url }}/{{ .Values.service.integration.tag }}
@@ -59,12 +62,15 @@ spec:
         ports:
         - containerPort: {{ .Values.service.integration.port }}    
         imagePullPolicy: Always
-        {{ if .Values.jwt.publicKey }}
         volumeMounts:
+        {{ if .Values.jwt.publicKey }}
         - name: jwt-keys-volume
           readOnly: true
           mountPath: /jwt-keys
         {{ end }}
+        {{- if .Values.service.integration.extraVolumeMounts -}}
+        {{ toYaml .Values.service.integration.extraVolumeMounts | nindent 8 }}
+        {{- end }}
         env:        
         - name: service.url.apigateway
           valueFrom:
@@ -154,12 +160,15 @@ spec:
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
         {{ end }}
+        {{- if .Values.service.integration.extraEnv -}}
+        {{ toYaml .Values.service.integration.extraEnv | nindent 8 }}
+        {{- end }}
       {{- if .Values.global.serviceAccount.create }}
       serviceAccountName: integration-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
