--- a/helm/decisionlens/templates/auth.yaml
+++ b/helm/decisionlens/templates/auth.yaml
@@ -40,11 +40,14 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
-      {{- if .Values.jwt.publicKey }}
       volumes:
+      {{- if .Values.jwt.publicKey }}
       - name: jwt-keys-volume
         secret:
           secretName: jwt-keys-secret
+      {{- end }}
+      {{- if .Values.service.auth.extraVolumes -}}
+      {{ toYaml .Values.service.auth.extraVolumes | nindent 6 }}
       {{- end }}
       containers:
       - name: auth
@@ -59,11 +62,14 @@ spec:
         ports:
         - containerPort: {{ .Values.service.auth.port }}    
         imagePullPolicy: Always
-        {{- if .Values.jwt.publicKey }}
         volumeMounts:
+        {{- if .Values.jwt.publicKey }}
         - name: jwt-keys-volume
           readOnly: true
           mountPath: /jwt-keys
+        {{- end }}
+        {{- if .Values.service.auth.extraVolumeMounts -}}
+        {{ toYaml .Values.service.auth.extraVolumeMounts | nindent 8 }}
         {{- end }}
         env:        
         - name: service.url.apigateway
@@ -172,18 +178,21 @@ spec:
               key: access-token-header
         - name: jwt.issuer
           value: {{ .Values.jwt.issuer }}
-        {{ if .Values.jwt.publicKey }}
+        {{- if .Values.jwt.publicKey -}}
         - name: jwt.privateKey
           value: /jwt-keys/private_key.pk8
         - name: jwt.publicKey
           value: /jwt-keys/public_key.pub
-        {{ end }}
+        {{- end }}
+        {{- if .Values.service.auth.extraEnv -}}
+        {{ toYaml .Values.service.auth.extraEnv | nindent 8 }}
+        {{- end }}
       {{- if .Values.global.serviceAccount.create }}
       serviceAccountName: auth-service
       {{- end }}
       imagePullSecrets:
-      {{- with .Values.global.imagePullSecrets }}
-      {{- toYaml . | nindent 6 }}
+      {{- range .Values.global.imagePullSecrets }}
+      - name: {{ . }}
       {{- end }}
 
 
