--- a/helm/decisionlens/values.yaml
+++ b/helm/decisionlens/values.yaml
@@ -1,16 +1,62 @@
 global:
   imagePullSecrets:
-  - name: regcred
+  - regcred
   annotations: {}
   podAnnotations: {} 
   serviceAccount:
     create: false
 
+# Enable or disable decision lens analytic services
+analytics:
+  pendo: true
+  google: true
+
 ingress:
+  ingressClassName: nginx
   dlx:
     annotations: {}
+    tls: []
+    hosts:
+    - host: dlx
+      paths:
+      - path: "/v1"
+        pathType: Prefix
+        serviceName: apigateway-service
+        port: 9005
+      - path: "/oauth/callback"
+        pathType: Prefix
+        serviceName: dlxui-service
+        port: 8089
+      - path: "/oauth"
+        pathType: Prefix
+        serviceName: apigateway-service
+        port: 9005
+      - path: "/.*-service"
+        pathType: Prefix
+        serviceName: apigateway-service
+        port: 9005
+      - path: "/"
+        pathType: Prefix
+        serviceName: dlxui-service
+        port: 8089
   dlc:
     annotations: {}
+    tls: []
+    hosts:
+    - host: dlc
+      paths:
+      - path: "/dl3-service-.*"
+        pathType: Prefix
+        serviceName: dlc-service
+        port: 8080
+      - path: "/dlm-service"
+        pathType: Prefix
+        serviceName: dlc-service
+        port: 8080
+      - path: "/"
+        pathType: Prefix
+        serviceName: dlcui-service
+        port: 8080
 
 service:
   image:
@@ -23,6 +69,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   portfolio:
     tag: decisionlens_downloads:portfolio-service_5.8.0
     port: 9001
@@ -31,6 +80,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   plan:
     tag: decisionlens_downloads:plan-service_4.2.5
     port: 9003
@@ -39,6 +91,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   messaging:
     tag: decisionlens_downloads:messaging-service_3.7.2
     port: 9004
@@ -47,6 +102,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   apigateway:
     tag: decisionlens_downloads:apigateway-service_4.7.2
     version: master
@@ -56,6 +114,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   auth:
     tag: decisionlens_downloads:auth-service_4.2.0
     port: 9006
@@ -64,6 +125,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   dlxui:
     tag: decisionlens_downloads:dlx-ui_5.8.2
     port: 8089
@@ -71,6 +135,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   dlc:
     tag: decisionlens_downloads:dlc-service_1.21.49
     port: 8080
@@ -79,6 +146,9 @@ service:
     labels: {}
     selectorLabels: {}
     annotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
   dlcui:
     tag: decisionlens_downloads:dlc-ui_1.21.49
     port: 8088
@@ -86,6 +156,9 @@ service:
     labels: {}
     selectorLabels: {}
     podAnnotations: {}
+    extraEnv: []
+    extraVolumes: []
+    extraVolumeMounts: []
 
 rabbitmq:
   image: 723504183657.dkr.ecr.us-east-1.amazonaws.com/decisionlens_downloads:rabbitmq_3.11.0
@@ -99,6 +172,9 @@ rabbitmq:
   podAnnotations: {}
   labels: {}
   selectorLabels: {}
+  extraEnv: []
+  extraVolumes: []
+  extraVolumeMounts: []
 
 database:
   host: 10.0.0.17
