--- a/helm/decisionlens/templates/dlcui.yaml
+++ b/helm/decisionlens/templates/dlcui.yaml
@@ -48,12 +48,12 @@ spec:
       - name: dlcui
         image: {{ .Values.service.image.url }}/{{ .Values.service.dlcui.tag }}
         resources:
-          requests:
-            memory: "1000Mi"
-            cpu: "1000m"
+          requests: 
+            memory: {{ .Values.service.dlcui.resources.requests.memory }}
+            cpu: {{ .Values.service.dlcui.resources.requests.cpu }}
           limits:
-            memory: "4000Mi"
-            cpu: "2000m"
+            memory: {{ .Values.service.dlcui.resources.limits.memory }}
+            cpu: {{ .Values.service.dlcui.resources.limits.cpu }}
         imagePullPolicy: Always
         ports:
         - containerPort: {{ .Values.service.dlcui.port }}
