--- a/helm/decisionlens/templates/dlc-ingress.yaml
+++ b/helm/decisionlens/templates/dlc-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 ---
 kind: Ingress
 apiVersion: networking.k8s.io/v1
@@ -37,4 +38,4 @@ spec:
               number: {{ .port }}
       {{- end -}}
   {{- end }}
-
+{{- end }}
