--- a/helm/decisionlens/templates/dlx-ingress.yaml
+++ b/helm/decisionlens/templates/dlx-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
@@ -36,4 +37,4 @@ spec:
               number: {{ .port }}
       {{- end -}}
   {{- end }}
-
+{{- end }}
